--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
             }		
 		stage('Deploy') {			
 			steps { bat "docker build -t api-gateway-image ."			    
-			        bat "docker run -p 8090:8090 -d --name api-gateway-container api-gateway-image"}		
+			        bat "docker run -p 8090:8090 -d --network app-network --name api-gateway-sr api-gateway-image"}		
 		}	
     }
 }
