--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
             }		
 		stage('Deploy') {			
 			steps { bat "docker build -t service-registry-image ."			    
-			        bat "docker run -p 8761:8761 -d --name service-registry-container service-registry-image"}		
+			        bat "docker run -p 8761:8761 -d --network app-network --name registry-sr service-registry-image"}		
 		}	
     }
 }
