--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
             }		
 		stage('Deploy') {			
 			steps { bat "docker build -t department-s1-image ."			    
-			        bat "docker run -p 8081:8081 -d --name department-s1-container department-s1-image"}		
+			        bat "docker run -p 8081:8081 -d --network app-network --name department-sr department-s1-image"}		
 		}	
     }
 }
